# iracing-cold-mirror

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  mock_telemetry.py  pyproject.toml  requirements.txt  run_live.bat  run_mock.bat  run_project.bat
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20f1d1a9a438_add_file_name_and_file_hash_to_session.py  473a33105f2e_initial_schema.py  ac1feb5b739f_add_indexes_to_telemetry.py  cf97760bcb70_initial_schema.py  d7eae3ef9ded_add_file_name_and_file_hash_to_session.py
deploy/: Dockerfile
dev/: check_db.py  check_lap_time.py  check_laps.py  check_telemetry.py  check_tracks.py  download_tracks.py  dump_yaml.py  find_sectors.py  ibt_reader.py  live_reader.py  mock_reader.py  reset_db.py  run_live.py  run_mock.py  session_info.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx  useTelemetry.js
frontend/src/api/: queries.js
frontend/src/assets/: track_paths.json
frontend/src/store/: useAppStore.js  (+1 more)
iracing_telemetry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: agent.py  download_tracks.py  import_session.py  run_live.py  run_mock.py
telemetry/: api.py  collector.py  config.py  database.py  main.py  mock_telemetry.py  redis.py  table-plan.yaml  telemetry_reader.py
telemetry/api/: app.py  deps.py  schemas.py
telemetry/collector/: ibt_reader.py  live_reader.py  service.py
telemetry/db/: __init__.py  models.py
telemetry/services/: delta.py  importer.py
tests/: test_api.py  test_delta.py
(+14 files in other folders)
