[project]
name = "iracing-telemetry"
version = "0.1.0"
description = "iRacing Live Telemetry and History API"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "redis",
    "psycopg2-binary",
    "pydantic-settings",
    "alembic",
    "watchdog"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["telemetry"]