[project]
name = "iracing-telemetry"
version = "0.1.0"
description = "iRacing Live Telemetry and History API"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "redis",
    "psycopg2-binary",
    "pydantic-settings",
    "alembic",
    "watchdog",
    "pyyaml",
    "httpx"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["telemetry*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # E=стиль, F=логические ошибки, I=сортировка импортов
ignore = ["E501"]        # Игнорируем слишком длинные строки, если их сложно разбить

[tool.ruff.format]
quote-style = "double"